# python-project-50

./: .gitignore  Makefile  README.md  gendiff1.cast  gendiff2.cast  gendiff3.cast  gendiff4.cast  gendiff5.cast  pyproject.toml  raznoe.txt  sonar-project.properties
.github/workflows/: python-app.yml
gendiff/: __init__.py  cli.py  diff_tree.py  generate.py  input_data.py  make_diff.py
gendiff/formatter/: json.py  plain.py  stylish.py
gendiff/formatters/: json.py
gendiff/scripts/: gendiff.py  generate.py  input_json.py
tests/: 1test_generate_diff.py  test_generate_diff.py  test_make_diff_tree.py
tests/fixtures/: testing code.py
tests/test_data/: diff_pod_voprosom.txt  diff_result.txt  diff_result_json.json
