[project]
name = "hexlet-code"
version = "0.1.0"
description = "Second Hexlet project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest-cov>=6.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
